# EFSPRAPY

./: LICENSE  pyproject.toml  readme.md  requirements.txt
efsprapy/: __init__.py  main.py  main_test.py  project_info.py
efsprapy/cfast/: cfast.py  cfast7.7.3  test_files.py
efsprapy/func/: controlled_fire.py  functions.py
efsprapy/mcs0/: __init__.py  calcs.py  inputs.py
efsprapy/mcs1/: __init__.py  calcs.py  calcs_old.py  inputs.py  safir_input_files.py
efsprapy/safir/: in_therm1d.py  re_patterns.py  re_patterns_test.py  safir.py  test_files.py  therm2d.py  therm2d_test.py
efsprapy/safir/therm1d/: hf_50.in  hf_ft_2.in  hf_ft_20.in  hf_ft_4.in
efsprapy/safir/therm2d_simple/: input.in
efsprapy/safir/xml/: output.XML
test/: __init__.py  mcs1_br187.ipynb  test01.py  test02.py  test_mcs0.py  test_mcs1.py
