[project]
name = "efsprapy"
description = "external fire spread probabilistic reliability assessment"
version = "0.0.1"
authors = [
    { name = "Yan Fu", email = "fuyans@gmail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "xmltodict"
]

[project.optional-dependencies]
dev = [
    "tqdm",
    "matplotlib",
    "fsetools",
    "sfeprapy"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]